# MotorBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.build.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  rust-clippy.yml
src/: error.rs  main.rs  plugin.rs  storage.rs
src/db/: db_client.rs  mod.rs
src/plugin/: error.rs  plugin_context.rs  plugin_info.rs
src/plugins/: coin_toss.rs  debug.rs  dice.rs  jokes.rs  mod.rs  patches.rs  ping.rs  points.rs  time.rs
src/plugins/patches/: error.rs  game_data.rs  mod.rs  patch_notes.rs  patches_plugin.rs
src/storage/: database.rs  error.rs  errors.rs
