[package]
name = "motorbot"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.12.3"
dotenv = "0.15.0"
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "http", "rustls_backend", "model", "cache"] }
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
clokwerk = "0.4.0-rc1"
chrono = "0.4.44"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rand = "0.10.1"
oai_rs = "0.1.3"
scraper = "0.26.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
openssl = { version = "0.10.77", features = ["vendored"] }

#  Reduce Docker Image Size

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
